module34 task 2 tellJoke completed

--- a/tasks/module34-more-about-javascript/index.html
+++ b/tasks/module34-more-about-javascript/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./delayMassage.js"></script>
+    <script src="./tellJokeDelay.js"></script>
 </body>
 </html>
