--- a/tasks/module34-more-about-javascript/index.html
+++ b/tasks/module34-more-about-javascript/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./tellJokeDelay.js"></script>
+    <button onclick="loadJoke()">click to load</button>
+    <script src="./fetchData.js"></script>
 </body>
 </html>
